# ai_full_stack_apps

./: .gitignore  README.md  SETUP_GUIDE.md
fastapi-openai-react-stack/: .gitignore
fastapi-openai-react-stack/ai-test/: .gitignore  README.md
fastapi-openai-react-stack/ai-test/app/: ai_service.py
projects/ai-invoice-intelligence/backend/: pyproject.toml
projects/ai-invoice-intelligence/backend/app/: ai_processor.py  config.py  db.py  duplicate_detector.py  invoice_extractor.py  main.py  models.py
projects/ai-invoice-intelligence/backend/app/rag/: ingest.py  query.py
projects/ai-invoice-intelligence/backend/app/routes/: chat.py  invoices.py  upload.py
projects/day5-docker-todo/: docker-compose.yml
projects/day5-docker-todo/backend/: pyproject.toml
projects/day5-docker-todo/frontend/: Dockerfile
projects/project-01-fastapi-openai/: README.md
projects/project-01-fastapi-openai/ai-frontend/: package-lock.json
projects/project-01-fastapi-openai/ai-test/: pyproject.toml
projects/project-02-echo-app/: main.py  pyproject.toml
projects/project-02-echo-app/echo-frontend/: package-lock.json  package.json
projects/project-02-echo-app/eco_backend/: main.py  requirements.txt
projects/project-03-todo-crud/: ARCHITECTURE.md  README.md  pyproject.toml
projects/project-03-todo-crud/backend/: main.py  models.py  requirements.txt
projects/project-04-pdf-docx-reader/: pyproject.toml
projects/project-04-pdf-docx-reader/backend/: ai.py  file_utils.py  main.py
projects/project-04-pdf-docx-reader/frontend/src/: App.jsx
(+17 files in other folders)
